--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -92,8 +92,6 @@
   margin-right: 1rem;
 }
 
-
-
 .email-input {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -104,20 +102,25 @@
   background-color: transparent;
 }
 
-.set-password{
-  display: flex; 
-margin-top: 1.25rem; 
-align-items: center; 
-border-radius: 1rem; 
-background: #F2F2F2;
+.set-password {
+  display: flex;
+  margin-top: 1.25rem;
+  align-items: center;
+  border-radius: 1rem;
+  background: #f2f2f2;
 }
 
-.set-password-confirm{
-  display: flex; 
-margin-top: 1.25rem; 
-align-items: center; 
-border-radius: 1rem; 
-background: #F2F2F2;
+.set-password-confirm {
+  display: flex;
+  margin-top: 1.25rem;
+  align-items: center;
+  border-radius: 1rem;
+  background: #f2f2f2;
+}
+
+.set-password > div,
+.set-password-confirm > div {
+  cursor: pointer;
 }
 
 .password-input {
@@ -160,6 +163,11 @@ background: #F2F2F2;
   text-transform: uppercase;
 }
 
-.next-arrow{
-  margin-left: -2.5rem; 
+.next-arrow {
+  margin-left: -2.5rem;
+}
+
+.icon {
+  width: 1rem;
+  height: 1rem;
 }
