--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -22,18 +22,14 @@
   cursor: pointer;
 }
 
-.sidebar-hover {
-  :hover {
-    fill: #bf13bf;
-    cursor: pointer;
-  }
+.sidebar-hover:hover {
+  fill: #bf13bf;
+  cursor: pointer;
 }
 
-.sidebar-exit-icon-hover {
-  :hover {
-    fill: #bf13bf;
-    cursor: pointer;
-  }
+.sidebar-exit-icon-hover:hover {
+  fill: #bf13bf;
+  cursor: pointer;
 }
 
 .sidebar-exit-icon {
